--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,3 +1,14 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.fancytext {
+  background: -webkit-linear-gradient(
+    180deg,
+    #68f7d5 0,
+    #ccffa6 50%,
+    #37ebaa 100%
+  );
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
