--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -43,7 +43,7 @@ nav {
 
   .nav-links {
     position: fixed;
-    background: black;
+    background: #262626;
     height: 100vh;
     width: 100%;
     flex-direction: column;
@@ -51,10 +51,11 @@ nav {
     -webkit-clip-path: circle(100px at 90% -20%);
     transition: all 1s ease-out;
     pointer-events: none;
+    z-index: 1;
   }
   .nav-links.open {
-    clip-path: circle(1000px at 90% -10%);
-    -webkit-clip-path: circle(1000px at 90% -10%);
+    clip-path: circle(1000px at 95% -5%);
+    -webkit-clip-path: circle(1000px at 95% -5%);
     pointer-events: all;
   }
   .nav-links li {
