--- a/src/styles/skills.css
+++ b/src/styles/skills.css
@@ -3,5 +3,75 @@
     color: #262626;
     left:70%;
     text-shadow: 0px 0px 3px #0e0d0d;
-    margin-top: 50px;
+    margin-top: 500px;
+}
+.react{
+    position: absolute;
+    color: #262626;
+    left:50%;
+    text-shadow: 0px 0px 3px #0e0d0d;
+    margin-top: 150px; 
+}
+
+.node{
+    position: absolute;
+    color: #262626;
+    left:60%;
+    text-shadow: 0px 0px 3px #0e0d0d;
+    margin-top: 300px; 
+}
+
+.jest{
+    position: absolute;
+    left:45%;
+    text-shadow: 0px 0px 3px #0e0d0d;
+    margin-top: 450px; 
+}
+
+.mongo{
+    position: absolute;
+    color: #262626;
+    left:45%;
+    text-shadow: 0px 0px 3px #0e0d0d;
+    margin-top: 600px; 
+}
+
+.tailwind{
+    position: absolute;
+    left:55%;
+    text-shadow: 0px 0px 3px #0e0d0d;
+    margin-top: 400px; 
+}
+
+.typescript{
+    position: absolute;
+    left:40%;
+    text-shadow: 0px 0px 3px #0e0d0d;
+    margin-top: 280px; 
+}
+
+.ci{
+    position: absolute;
+    left:30%;
+    text-shadow: 0px 0px 3px #0e0d0d;
+    margin-top: 530px; 
+}
+.graphql{
+    position: absolute;
+    left:35%;
+    text-shadow: 0px 0px 3px #0e0d0d;
+    margin-top: 660px; 
+}
+
+.redux{
+    position: absolute;
+    left:73%;
+    text-shadow: 0px 0px 3px #0e0d0d;
+    margin-top: 700px; 
+}
+.javascript{
+    position: absolute;
+    left: 53%;
+    text-shadow: 0px 0px 3px #0e0d0d;
+    margin-top: 800px; 
 }
