--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -43,19 +43,21 @@ nav {
 
   .nav-links {
     position: fixed;
+    left: 0;
     background: #262626;
     height: 100vh;
     width: 100%;
     flex-direction: column;
-    clip-path: circle(100px at 90% -20%);
-    -webkit-clip-path: circle(100px at 90% -20%);
+    clip-path: circle(100px at 100% -20%);
+    -webkit-clip-path: circle(100px at 100% -20%);
     transition: all 1s ease-out;
     pointer-events: none;
     z-index: 1;
+    margin-left: 0;
   }
   .nav-links.open {
-    clip-path: circle(1000px at 95% -5%);
-    -webkit-clip-path: circle(1000px at 95% -5%);
+    clip-path: circle(1000px at 99% -1%);
+    -webkit-clip-path: circle(1000px at 99% -1%);
     pointer-events: all;
   }
   .nav-links li {
