--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -44,6 +44,7 @@ nav {
   .nav-links {
     position: fixed;
     left: 0;
+    top: 0;
     background: #262626;
     height: 100vh;
     width: 100%;
